--- a/style.css
+++ b/style.css
@@ -309,3 +309,18 @@ footer{
   text-align: center;
   padding: 12px;
 }
+.image-viewer {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.85);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 999999;
+}
+
+.image-viewer img {
+  width: 90%;
+  max-width: 600px;
+  border-radius: 12px;
+}
